--- a/themes/ivy/layouts/_default/single.html
+++ b/themes/ivy/layouts/_default/single.html
@@ -1,11 +1,29 @@
 {{ partial "header.html" . }}
 
-{{ if .Params.show_toc }} {{ .TableOfContents }} {{ end }}
-
-{{ if (and (eq (getenv "HUGO_BLOGDOWN_POST_RELREF") "") (and (and .Params.date (lt (now.AddDate 0 0 ($.Site.Params.holdDays | default -90)) .Date)) (in (string .Content) "<!--# ON_HOLD -->"))) }}
-{{ (index (split .Content "<!--# ON_HOLD -->") 0) | safeHTML }}
-{{ else }}
-{{ .Content }}
+{{ if .Params.show_toc }} 
+  {{ .TableOfContents }} 
 {{ end }}
+
+{{ if (and (eq (getenv "HUGO_BLOGDOWN_POST_RELREF") "") 
+           (and (and .Params.date (lt (now.AddDate 0 0 ($.Site.Params.holdDays | default -90)) .Date)) 
+                (in (string .Content) "<!--# ON_HOLD -->"))) }}
+  {{ (index (split .Content "<!--# ON_HOLD -->") 0) | safeHTML }}
+{{ else }}
+  {{ .Content }}
+{{ end }}
+
+<!-- 新增多语言切换模块开始 -->
+{{ if .Translations }}
+  <div class="language-switch">
+    <strong>Language: </strong>
+    <ul>
+      <li><a href="{{ .Permalink }}">{{ .Language.LanguageName }}</a></li>
+      {{ range .Translations }}
+        <li><a href="{{ .Permalink }}">{{ .Language.LanguageName }}</a></li>
+      {{ end }}
+    </ul>
+  </div>
+{{ end }}
+<!-- 新增多语言切换模块结束 -->
 
 {{ partial "footer.html" . }}
